--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 node_modules
-PROJECT _BOOTSTRAP
-PROJECT_BOOTSTRAP
 logo/logo.png
 assets/css/layout.css.map
 zadanie.txt
 package-lock.json
-gulpfilejs.txt
+gulpfile.js
